Добавляет описание  к  имиджам слаедера

--- a/index.html
+++ b/index.html
@@ -75,27 +75,23 @@
           <span class="visually-hidden">Следующее мороженое</span>
         </button>
         <ul class="slider">
-          <li>
+          <li class="slider-image-preview">
             <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
             <p class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
             <a class="button" href="order.html">Заказать</a>
-          </li>
-          <li>
             <img class="slider-image" src="#" alt="Нежный пломбир с клубничным джемом">
           </li>
           <li class="slider-image-preview">
-            <a href="#">
-              <span class="visually-hidden">
-                Сливочное мороженое со вкусом банана
-              </span>
-            </a>
+            <h3 class="main-gallery-title">Сливочное мороженое со вкусом банана</h3>
+            <p class="basic-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.</p>
+            <a class="button" href="order.html">Заказать</a>
+            <img class="slider-image" src="#" alt="Сливочное мороженое со вкусом банана">
           </li>
           <li class="slider-image-preview">
-            <a href="#">
-              <span class="visually-hidden">
-                Карамельный пломбир с маршмеллоу
-              </span>
-            </a>
+            <h3 class="main-gallery-title">Карамельный пломбир с маршмеллоу</h3>
+            <p class="basic-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
+            <a class="button" href="order.html">Заказать</a>
+            <img class="slider-image" src="#" alt="Карамельный пломбир с маршмеллоу">
           </li>
         </ul>
         <ol class="slider-pagination">
