Добавляет класс популярным продуктам

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </li>
           <li class="slider-pagination-item">
             <button class="slider-pagination-button" type="button">
-              <span class="visually-hidden"> Сливочное мороженое со вкусом банана</span>
+              <span class="visually-hidden">Сливочное мороженое со вкусом банана</span>
             </button>
           </li>
           <li class="slider-pagination-item">
@@ -150,7 +150,7 @@
       <section class="popular-product">
         <h2 class="popular-product-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
         <ul class="popular-product-list">
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Малинка</h3>
@@ -163,7 +163,7 @@
               </span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Фисташка</h3>
@@ -176,7 +176,7 @@
               </span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Черника</h3>
@@ -188,7 +188,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Бабл-гам</h3>
