Заменяет span на p

--- a/index.html
+++ b/index.html
@@ -155,12 +155,10 @@
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Малинка</h3>
             </a>
-            <span class="basic-text">Сливочное мороженое с малиновым джемом</span>
+            <p class="basic-text">Сливочное мороженое с малиновым джемом</p>
             <span class="product-card-price">310 ₽/кг</span>
             <a class="product-card-button button" href="#">
-              <span class="visually-hidden">
-                Купить
-              </span>
+              <span class="visually-hidden">Купить</span>
             </a>
           </li>
           <li class="popular-product-item">
@@ -168,12 +166,10 @@
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Фисташка</h3>
             </a>
-            <span class="basic-text">Фисташковый пломбир с кусочками шоколада</span>
+            <p class="basic-text">Фисташковый пломбир с кусочками шоколада</p>
             <span class="product-card-price">340 ₽/кг</span>
             <a class="product-card-button button" href="#">
-              <span class="visually-hidden">
-                Купить
-              </span>
+              <span class="visually-hidden">Купить</span>
             </a>
           </li>
           <li class="popular-product-item">
@@ -181,11 +177,10 @@
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Черника</h3>
             </a>
-            <span class="basic-text">Крем-брюле с черничным джемом</span>
+            <p class="basic-text">Крем-брюле с черничным джемом</p>
             <span class="product-card-price">330 ₽/кг</span>
             <a class="product-card-button button" href="#">
-              <span class="visually-hidden">
-              Купить</span>
+              <span class="visually-hidden">Купить</span>
             </a>
           </li>
           <li class="popular-product-item">
@@ -193,11 +188,10 @@
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Бабл-гам</h3>
             </a>
-            <span class="basic-text">Ванильный пломбир со сладкой посыпкой</span>
+            <p class="basic-text">Ванильный пломбир со сладкой посыпкой</p>
             <span class="product-card-price">320 ₽/кг</span>
             <a class="product-card-button button" href="#">
-              <span class="visually-hidden">
-              Купить</span>
+              <span class="visually-hidden">Купить</span>
             </a>
           </li>
         </ul>
