Заменяет span на p

--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@
         <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <span class="basic-text">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</span>
+            <p class="basic-text">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</p>
           </li>
           <li class="advantages-item">
-            <span class="basic-text">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</span>
+            <p class="basic-text">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</p>
           </li>
           <li class="advantages-item">
-            <span class="basic-text">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</span>
+            <p class="basic-text">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</p>
           </li>
           <li class="advantages-item">
-            <span class="basic-text">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</span>
+            <p class="basic-text">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</p>
           </li>
         </ul>
       </section>
       <article class="advertising">
-        <span class="basic-text">Новое в нашем блоге</span>
+        <p class="basic-text">Новое в нашем блоге</p>
         <h3 class="advertising-title">10 способов сервировки фруктовых щербетов к столу</h3>
       </article>
       <section class="newsletter">
