--- a/index.html
+++ b/index.html
@@ -214,18 +214,18 @@
         </ul>
       </section>
       <article class="advertising">
-        <p class="basic-text">Новое в нашем блоге</p>
+        <a class="blog-advertising" href="blog.html">
+        <h2 class="basic-text">Новое в нашем блоге</h2>
         <h3 class="advertising-title">10 способов сервировки фруктовых щербетов к столу</h3>
+        </a>
       </article>
       <section class="newsletter">
         <h2 class="page-footer-title">Получайте лучшие предложения</h2>
         <span class="basic-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</span>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="newsletter-email">Email</label>
-          <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">
-            <span class="button button-pink">Отправить</span>
-          </button>
+          <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+          <button class="button newsletter-button" type="submit">Отправить</button>
         </form>
       </section>
       <section class="delivery">
