--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
         <p>Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
         <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="delivery-form-date">
-            <label class="form-label" for="delivery-date">Дата</label>
-            <input type="text" id="delivery-date" name="delivery-date" placeholder="01.04.2020">
+            <label class="form-label" for="date">Дата</label>
+            <input type="date" id="date" name="date" placeholder="01.04.2020">
           </p>
           <p class="delivery-form-phone">
-            <label for="delivery-phone">Телефон</label>
-            <input type="text" id="delivery-phone" name="delivery-phone" placeholder="+7 800 999-00-00">
+            <label for="tel">Телефон</label>
+            <input type="tel" id="tel" name="tel" pattern="[0-9]{1} [0-9]{3} [0-9]{3}[0-9]{2}[0-9]{2}" placeholder="8 800 9990000">
           </p>
           <p class="delivery-form-address">
             <label for="delivery-address">Адрес</label>
