--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
         <p>Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
         <p>Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
         <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="delivery-form-date">
+          <p class="delivery-forms delivery-form-date">
             <label class="form-label" for="date">Дата</label>
             <input type="date" id="date" name="date" placeholder="01.04.2020">
           </p>
-          <p class="delivery-form-phone">
+          <p class="delivery-forms delivery-form-phone">
             <label for="tel">Телефон</label>
             <input type="tel" id="tel" name="tel" pattern="[0-9]{1} [0-9]{3} [0-9]{3}[0-9]{2}[0-9]{2}" placeholder="8 800 9990000">
           </p>
-          <p class="delivery-form-address">
+          <p class="delivery-forms delivery-form-address">
             <label for="delivery-address">Адрес</label>
             <input type="text" id="delivery-name" name="delivery-name" placeholder="ул. Большая Конюшенная, 19/8">
           </p>
