Правит контакты, класс у поставщиков и убирает лого академии

--- a/index.html
+++ b/index.html
@@ -249,11 +249,7 @@
         </form>
       </section>
       <section class="contacts">
-        <h2 class="contacts-title">
-          <span class="visually-hidden">
-            Контакты
-          </span>
-        </h2>
+        <h2 class="visually-hidden"> Контакты</h2>
         <h3 class="contacts-subtitle">Адрес главного офиса и офлайн-магазина:</h3>
         <address class="contacts-address">
           <p class="contacts-address-text">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
@@ -291,7 +287,7 @@
           <h2 class="visually-hidden">Навигация</h2>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-suppliers" href="#">Для поставщиков</a>
+              <a class="navigation-link navigation-link-heart" href="#">Для поставщиков</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О производстве</a>
@@ -306,7 +302,6 @@
         </section>
         <section class="htmlacademy">
           <h2 class="visually-hidden">Данные о компании разрабодчике</h2>
-          <img class="htmlacademy-logo" src="" alt="Логотип htmlacademy">
           <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
         </section>
       </footer>
