Разделяет фильтры и каталог на два section

--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
       </nav>
     </header>
 
-    <main class="main-inter">
+    <main class="main-index">
       <header class="inner-header">
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
@@ -81,8 +81,8 @@
         </ul>
         <h1 class="inner-header-title">Сливочное мороженое</h1>
       </header>
-      <section class="catalog-products">
-        <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+      <section class="filter">
+        <h2 class="visually-hidden">Фильтры для товаров</h2>
         <select class="select-control">
           <h3 class="select-control-title">Сортировка</h3>
           <option value="popular">По популярности</option>
@@ -157,6 +157,8 @@
           </fieldset>
           <button class="button" type="submit">Применить</button>
         </form>
+      </section>
+      <section class="catalog-product">
         <ul class="product-list">
           <li>
             <a class="product-card-link" href="product.html">
@@ -334,7 +336,6 @@
             </a>
           </li>
         </ul>
-
       </section>
     </main>
 
