Удаляет заголовок добавляет label

--- a/catalog.html
+++ b/catalog.html
@@ -84,7 +84,7 @@
       <section class="filter">
         <h2 class="visually-hidden">Фильтры для товаров</h2>
         <select class="select-control">
-          <h3 class="select-control-title">Сортировка</h3>
+          <label class="select-control-title">Сортировка</label>
           <option value="popular">По популярности</option>
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
