Добавляет намеченный блок в фильтры

--- a/catalog.html
+++ b/catalog.html
@@ -90,6 +90,11 @@
             <option value="cheap">Сначала дешёвые</option>
             <option value="expensive">Сначала дорогие</option>
           </select>
+          <!-- пока намеченный блок
+          <label> Цена: 100 ₽ – 500 ₽
+            <input type="text" value="Цена: 100 ₽ – 500 ₽">
+          </label>
+          -->
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Жирность:</legend>
             <ul class="catalog-filter-list">
