Правит опечатку, заменяет класс

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo">
-        <img class="logo" src="" alt="Логотип Gllacy Shop">
+          <img class="logo" src="" alt="Логотип Gllacy Shop">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -67,7 +67,7 @@
     <main class="main-index">
       <h1 class="visually-hidden">Магазин мороженого Gllacy Shop</h1>
       <section class="main-gallery">
-        <h2 class="main-gallery-title">Галирея мороженого</h2>
+        <h2 class="visually-hidden">Галерея мороженого</h2>
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущее мороженое</span>
         </button>
