Убирает лишние теги  р

--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
       <section class="advantages">
         <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
         <ul class="advantages-list">
-          <li class="advantages-item">
-            <p class="basic-text">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</p>
+          <li class="advantages-item basic-text">
+            Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.
           </li>
-          <li class="advantages-item">
-            <p class="basic-text">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</p>
+          <li class="advantages-item basic-text">
+            Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.
           </li>
-          <li class="advantages-item">
-            <p class="basic-text">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</p>
+          <li class="advantages-item basic-text">
+            Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.
           </li>
-          <li class="advantages-item">
-            <p class="basic-text">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</p>
+          <li class="advantages-item basic-text">
+            Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.
           </li>
         </ul>
       </section>
