--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           </p>
           <p class="delivery-forms delivery-form-phone">
             <label for="tel">Телефон</label>
-            <input type="tel" id="tel" name="tel" pattern="[0-9]{1} [0-9]{3} [0-9]{3}[0-9]{2}[0-9]{2}" placeholder="8 800 9990000">
+            <input type="tel" id="tel" name="tel" placeholder="8 800 9990000">
           </p>
           <p class="delivery-forms delivery-form-address">
             <label for="delivery-address">Адрес</label>
