--- a/catalog.html
+++ b/catalog.html
@@ -165,7 +165,7 @@
       </section>
       <section class="catalog-product">
         <ul class="product-list">
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Малинка</h3>
@@ -178,7 +178,7 @@
               </span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Фисташка</h3>
@@ -191,7 +191,7 @@
               </span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Черника</h3>
@@ -215,7 +215,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Ежевика</h3>
@@ -227,7 +227,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Банан</h3>
@@ -239,7 +239,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Шоколадка</h3>
@@ -251,7 +251,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Клубничка</h3>
@@ -263,7 +263,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Лимон</h3>
@@ -275,7 +275,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Ментол</h3>
@@ -287,7 +287,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Орешек</h3>
@@ -299,7 +299,7 @@
               Купить</span>
             </a>
           </li>
-          <li>
+          <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="" alt="">
               <h3 class="product-card-title">Крем-брюле</h3>
