Добавляет разделу заголовок

--- a/catalog.html
+++ b/catalog.html
@@ -164,6 +164,7 @@
         </form>
       </section>
       <section class="catalog-product">
+        <h2 class="visually-hidden">Каталог товаров</h2>
         <ul class="product-list">
           <li class="popular-product-item">
             <a class="product-card-link" href="product.html">
