Правит блок с блогом

--- a/index.html
+++ b/index.html
@@ -214,10 +214,8 @@
         </ul>
       </section>
       <article class="advertising">
-        <a class="blog-advertising" href="blog.html">
         <h2 class="basic-text">Новое в нашем блоге</h2>
-        <h3 class="advertising-title">10 способов сервировки фруктовых щербетов к столу</h3>
-        </a>
+        <a class="advertising-title" href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
       </article>
       <section class="newsletter">
         <h2 class="page-footer-title">Получайте лучшие предложения</h2>
