Правки по картинкам

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo">
-          <img class="logo" src="images/logo_gllacy_shop.svg" width="137" height="auto" alt="Логотип Gllacy Shop">
+          <img class="logo" src="images/logo_gllacy_shop.svg" width="138" height="56" alt="Логотип Gllacy Shop">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -79,19 +79,19 @@
             <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
             <p class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
             <a class="button" href="order.html">Заказать</a>
-            <img class="slider-image" src="images/main_ice_cream1.png" width="auto" height="507" alt="Нежный пломбир с клубничным джемом">
+            <img class="slider-image" src="images/main_ice_cream_1.png" width="auto" height="507" alt="Нежный пломбир с клубничным джемом">
           </li>
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Сливочное мороженое со вкусом банана</h3>
             <p class="basic-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.</p>
             <a class="button" href="order.html">Заказать</a>
-            <img class="slider-image" src="images/main_ice_cream2.png" width="auto" height="507" alt="Сливочное мороженое со вкусом банана">
+            <img class="slider-image" src="images/main_ice_cream_2.png" width="auto" height="507" alt="Сливочное мороженое со вкусом банана">
           </li>
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Карамельный пломбир с маршмеллоу</h3>
             <p class="basic-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
             <a class="button" href="order.html">Заказать</a>
-            <img class="slider-image" src="images/main_ice_cream3.png" width="auto" height="507" alt="Карамельный пломбир с маршмеллоу">
+            <img class="slider-image" src="images/main_ice_cream_3.png" width="auto" height="507" alt="Карамельный пломбир с маршмеллоу">
           </li>
         </ul>
         <ol class="slider-pagination">
