Правит размер картинок

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
             <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
             <p class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
             <a class="button" href="order.html">Заказать</a>
-            <img class="slider-image" src="images/main_ice_cream_1.png" width="auto" height="507" alt="Нежный пломбир с клубничным джемом">
+            <img class="slider-image" src="images/main_ice_cream_1.png" width="300" height="562" alt="Нежный пломбир с клубничным джемом">
           </li>
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Сливочное мороженое со вкусом банана</h3>
             <p class="basic-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.</p>
             <a class="button" href="order.html">Заказать</a>
-            <img class="slider-image" src="images/main_ice_cream_2.png" width="auto" height="507" alt="Сливочное мороженое со вкусом банана">
+            <img class="slider-image" src="images/main_ice_cream_2.png" width="300" height="562" alt="Сливочное мороженое со вкусом банана">
           </li>
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Карамельный пломбир с маршмеллоу</h3>
             <p class="basic-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
             <a class="button" href="order.html">Заказать</a>
-            <img class="slider-image" src="images/main_ice_cream_3.png" width="auto" height="507" alt="Карамельный пломбир с маршмеллоу">
+            <img class="slider-image" src="images/main_ice_cream_3.png" width="300" height="562" alt="Карамельный пломбир с маршмеллоу">
           </li>
         </ul>
         <ol class="slider-pagination">
@@ -152,7 +152,7 @@
         <ul class="popular-product-list">
           <li class="popular-product-item">
             <a class="product-card-link">
-              <img class="product-card-image" src="images/catalog/raspberry_ice_cream.jpg" width="168" height="168" alt="">
+              <img class="product-card-image" src="images/catalog/raspberry_ice_cream.jpg" width="168" height="168" alt="" aria-hidden="true">
               <h3 class="product-card-title">Малинка</h3>
             </a>
             <p class="basic-text">Сливочное мороженое с малиновым джемом</p>
@@ -163,7 +163,7 @@
           </li>
           <li class="popular-product-item">
             <a class="product-card-link">
-              <img class="product-card-image" src="images/catalog/pistachio_ice_cream.jpg" width="168" height="168" alt="">
+              <img class="product-card-image" src="images/catalog/pistachio_ice_cream.jpg" width="168" height="168" alt="" aria-hidden="true">
               <h3 class="product-card-title">Фисташка</h3>
             </a>
             <p class="basic-text">Фисташковый пломбир с кусочками шоколада</p>
@@ -174,7 +174,7 @@
           </li>
           <li class="popular-product-item">
             <a class="product-card-link">
-              <img class="product-card-image" src="images/catalog/blueberry_ice_cream.jpg" width="168" height="168" alt="">
+              <img class="product-card-image" src="images/catalog/blueberry_ice_cream.jpg" width="168" height="168" alt="" aria-hidden="true">
               <h3 class="product-card-title">Черника</h3>
             </a>
             <p class="basic-text">Крем-брюле с черничным джемом</p>
@@ -185,7 +185,7 @@
           </li>
           <li class="popular-product-item">
             <a class="product-card-link">
-              <img class="product-card-image" src="images/catalog/bubble_gum_ice_cream.jpg" width="168" height="168" alt="">
+              <img class="product-card-image" src="images/catalog/bubble_gum_ice_cream.jpg" width="168" height="168" alt="" aria-hidden="true">
               <h3 class="product-card-title">Бабл-гам</h3>
             </a>
             <p class="basic-text">Ванильный пломбир со сладкой посыпкой</p>
