Добавляет стиль текста блоку с галлереей

--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
         <ul class="slider">
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
-            <p class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
+            <p class="main-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
             <a class="button" href="order.html">Заказать</a>
             <img class="slider-image" src="images/main_ice_cream_1.png" width="300" height="562" alt="Нежный пломбир с клубничным джемом">
           </li>
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Сливочное мороженое со вкусом банана</h3>
-            <p class="basic-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.</p>
+            <p class="main-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение даже в самый жаркий летний день.</p>
             <a class="button" href="order.html">Заказать</a>
             <img class="slider-image" src="images/main_ice_cream_2.png" width="300" height="562" alt="Сливочное мороженое со вкусом банана">
           </li>
           <li class="slider-image-preview">
             <h3 class="main-gallery-title">Карамельный пломбир с маршмеллоу</h3>
-            <p class="basic-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
+            <p class="main-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца сладкоежек всех возрастов.</p>
             <a class="button" href="order.html">Заказать</a>
             <img class="slider-image" src="images/main_ice_cream_3.png" width="300" height="562" alt="Карамельный пломбир с маршмеллоу">
           </li>
