Добавляет стили блоку с акциями

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
       <section class="gifts">
         <h2 class="gifts-title">Заказывайте мороженое и получайте подарки!</h2>
         <ul class="gifts-list">
-          <li class="gifts-item">
+          <li class="gifts-item gifts-item-raspberry">
             <h3 class="gifts-item-title">Малинка даром!</h3>
-            <span class="basic-text">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</span>
+            <p>При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
             <a class="button" href="#">Хочу подарок</a>
           </li>
-          <li class="gifts-item">
+          <li class="gifts-item gifts-item-marshmallow">
             <h3 class="gifts-item-title">Маршмеллоу даром!</h3>
-            <span class="basic-text">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</span>
+            <p>При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
             <a class="button" href="#">Хочу подарок</a>
           </li>
         </ul>
